veridian dynamics lunch save

--- a/welcome.html
+++ b/welcome.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>html exercises</title>
 </head>
 <body>
-<h1>Deimos</h1>
-<p> These are my morning warmups:</p>
+    <h1>Hello World!</h1>
+    <p>Deimos!</p>
+
 </body>
 </html>
