added css style sheet and boxes

--- a/github.html
+++ b/github.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub</title>
-    <style>
-        #topnav {
-            background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="css/github.css">
 </head>
 <body>
 <nav id="topnav">
 <table>
     <tr>
-        <th><a href=""> <img src="img/30x30.svg" alt="git hub logo"></a></th>
-        <th><a href ="" style="color:white">Pull requests</a></th>
-        <th><a href ="" style="color:white">Issues</a></th>
-        <th><a href ="" style="color:white">Marketplace</a></th>
-        <th><a href ="" style="color:white">Explore</a></th>
+        <th><a href="" style="color: white"> <img src="img/github.png" alt="git hub logo" height="30" width="30"></a></th>
+        <th><a href ="" style="color: white">Pull requests</a></th>
+        <th><a href ="" style="color: white">Issues</a></th>
+        <th><a href ="" style="color: white">Marketplace</a></th>
+        <th><a href ="" style="color: white">Explore</a></th>
     </tr>
 </table>
 </nav>
-<p> <img src="img/30x30.svg" alt="code up logo">Codeup</p>
+<div id="greybox" class="box"> <img src="img/codeup-arrow.png" alt="code up logo" width="30" height="30">&emsp;Codeup
 <table>
     <tr>
-        <th>Repositories</th>
-        <th>People</th>
-        <th>Teams</th>
-        <th>Projects</th>
-        <th>settings</th>
+        <th><a href="">Repositories 39</a></th>
+        <th><a href="">People 19</a></th>
+        <th><a href="">Teams 7</a></th>
+        <th><a href="">Projects 0</a></th>
+        <th><a href="">Settings</a></th>
     </tr>
 </table>
+</div>
 <table>
     <tr>
         <th>Codeup's dev team</th>
@@ -43,8 +40,8 @@
 
 </body>
 
-
-
-<footer>©2018 GitHub Inc. <a href="">Terms</a> <a href="">Privacy</a> <a href="">Security</a> <a href="">Status</a> <a href="">Help</a> &emsp; &emsp; &emsp;<a href="">Contact Github</a> <a href="">API</a> <a href="">Training</a> <a href="">Shop</a> <a href="">Blog</a> <a href="">About</a>
+<footer>
+    <div id="foot1">©2018 GitHub Inc. <a href="">Terms</a> <a href="">Privacy</a> <a href="">Security</a> <a href="">Status</a> <a href="">Help</a> </div>
+    <div id="foot2"> <a href="">Contact Github</a> <a href="">API</a> <a href="">Training</a> <a href="">Shop</a> <a href="">Blog</a> <a href="">About</a> </div>
 </footer>
 </html>
