added styling and boxes for the mid section

--- a/github.html
+++ b/github.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>GitHub</title>
-    <link rel="stylesheet" href="css/github.css">
-</head>
-<body>
-<nav id="topnav">
-<table>
-    <tr>
-        <th><a href="" style="color: white"> <img src="img/github.png" alt="git hub logo" height="30" width="30"></a></th>
-        <th><a href ="" style="color: white">Pull requests</a></th>
-        <th><a href ="" style="color: white">Issues</a></th>
-        <th><a href ="" style="color: white">Marketplace</a></th>
-        <th><a href ="" style="color: white">Explore</a></th>
-    </tr>
-</table>
-</nav>
-<div id="greybox" class="box"> <img src="img/codeup-arrow.png" alt="code up logo" width="30" height="30">&emsp;Codeup
-<table>
-    <tr>
-        <th><a href="">Repositories 39</a></th>
-        <th><a href="">People 19</a></th>
-        <th><a href="">Teams 7</a></th>
-        <th><a href="">Projects 0</a></th>
-        <th><a href="">Settings</a></th>
-    </tr>
-</table>
-</div>
-<table>
-    <tr>
-        <th>Codeup's dev team</th>
-    </tr>
-    <tr>
-        <td><img src="img/48x48.svg" alt="icon">Kent Buck</td>
-    </tr>
-
-</table>
-
-</body>
-
-<footer>
-    <div id="foot1">©2018 GitHub Inc. <a href="">Terms</a> <a href="">Privacy</a> <a href="">Security</a> <a href="">Status</a> <a href="">Help</a> </div>
-    <div id="foot2"> <a href="">Contact Github</a> <a href="">API</a> <a href="">Training</a> <a href="">Shop</a> <a href="">Blog</a> <a href="">About</a> </div>
-</footer>
+    <head>
+        <meta charset="UTF-8">
+        <title>GitHub</title>
+        <link rel="stylesheet" href="css/github.css">
+    </head>
+    <body>
+        <nav id="topnav">
+            <table>
+                <tr>
+                    <th><a href="home"> <img src="img/github.png" alt="git hub logo" height="30" width="30"></a></th>
+                    <th><a href ="" style="color: white">Pull requests</a>&emsp;</th>
+                    <th><a href ="" style="color: white">Issues</a>&emsp;</th>
+                    <th><a href ="" style="color: white">Marketplace</a>&emsp;</th>
+                    <th><a href ="" style="color: white">Explore</a>&emsp;</th>
+                </tr>
+            </table>
+        </nav>
+        <div id="greybox" class="box"> <img src="img/codeup-arrow.png" alt="code up logo" width="30" height="30">&emsp;Codeup
+        <table>
+            <tr>
+                <th><a class="link" href="">Repositories 39</a>&emsp;</th>
+                <th><a class="link" href="">People 19</a>&emsp;</th>
+                <th><a class="link" href="">Teams 7</a>&emsp;</th>
+                <th><a class="link" href="">Projects 0</a>&emsp;</th>
+                <th><a class="link" href="">Settings</a></th>
+            </tr>
+        </table>
+        </div>
+        <div id="greybox1">&emsp;Codeup's dev team</div>
+        <div id="whitebox">&emsp;<img src="img/48x48.svg" alt="icon">&emsp;KentBuck&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Member&emsp;&emsp;1 team</div>
+        <div id="whitebox">&emsp;<img src="img/codeup-arrow.png" alt="icon" height="48" width="48">&emsp;CodeupInstructors&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Member&emsp;&emsp;1 team</div>
+        <div id="whitebox">&emsp;<img src="img/48x48.svg" alt="icon">&emsp;MartinFowler&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Member&emsp;&emsp;0 teams</div>
+        <br>
+        <hr>
+        <br>
+    </body>
+    <footer>
+        <div id="foot1">©2018 GitHub Inc. &emsp; <a href="">Terms</a> &emsp; <a href="">Privacy</a> &emsp; <a href="">Security</a> &emsp; <a href="">Status</a> &emsp; <a href="">Help</a> </div>
+        <div id="foot2"> <a href="">Contact Github</a> &emsp; <a href="">API</a> &emsp; <a href="">Training</a> &emsp; <a href="">Shop</a> &emsp; <a href="">Blog</a> &emsp; <a href="">About</a> </div>
+    </footer>
 </html>
