commit morning warmup

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Morning Warmups</title>
 </head>
 <body>
 <h1>Deimos</h1>
 <p> These are my morning warmups:</p>
+<script>
+    function sum(a, b) {
+    return a + b;
+}
+console.log(sum(3,5));
+</script>
+
 </body>
 </html>
