--- a/property-search.html
+++ b/property-search.html
@@ -5,27 +5,47 @@
         <title>Property Search</title>
     </head>
     <body>
-        <h1>Search for a property</h1>
+        <h1>Search for a Property</h1>
         <br>
+        <div>Property Type</div>
         <form>
-            <select name="Propertytype">
-                <option value="google">Chrome</option>
-                <option value="ios">Safari</option>
-                <option value="fox">Fire Fox</option>
-                <option value="ie">Internet Explorer</option>
-                <option value="other">Other</option>
-            </select>
-
-
-
-
-
-
-
-
-
-
-
+            <label>
+                <select name="Propertytype">
+                    <option value="house">House</option>
+                    <option value="multi">Townhome/Condo</option>
+                    <option value="multi1">Multi-Family</option>
+                    <option value="farm">Farm</option>
+                    <option value="land">Land</option>
+                    <option value="mfg">Mobile</option>
+                </select>
+            </label>
+            <br>
+            <br>
+            <label for="sqft">Square Footage</label><br>
+            <input id="sqft" type="text" name="feet" placeholder="Sqft" required>
+            <br>
+            <br>
+            <label for="minp">Min. Price</label><br>
+            <input id="minp" type="text" name="price" placeholder="$$" required>
+            <br>
+            <br>
+            <label for="maxp">Max Price</label><br>
+            <input id="maxp" type="text" name="mprice" placeholder="$$$" required>
+            <br>
+            <br>
+            <label for="zip">Zip Code</label><br>
+            <input id="zip" type="text" name="zcode" placeholder="#####" required>
+            <br>
+            <br>
+            <label for="bdrm"># of bedrooms</label><br>
+            <input id="bdrm" type="text" name="bed" placeholder="#" required>
+            <br>
+            <br>
+            <label for="bthrm"># of bathrooms</label><br>
+            <input id="bthrm" type="text" name="bath" placeholder="#" required>
+            <br>
+            <br>
+            <button type="submit">Search Now!</button>
         </form>
     </body>
 </html>
