--- a/welcome.html
+++ b/welcome.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>html exercises</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1 class="fancy-header">Hello World!</h1>
     <p>Deimos!</p>
 
 </body>
