exercises and bonus stuff

--- a/form.html
+++ b/form.html
@@ -18,13 +18,13 @@
             <br>
             <textarea id="Bio" name="comment"  cols="100" rows="15" placeholder="Please tell us a little about yourself."></textarea>
             <br>
-            <h2>How did you hear about us?</h2>
-            <input type="radio" name="how" value="a" checked> Billboard <br>
-            <input type="radio" name="how" value="b"> Radio Advertisement <br>
-            <input type="radio" name="how" value="c"> Internet Advertisement <br>
-            <input type="radio" name="how" value="d"> Other <br>
+            <h3>How did you hear about us?</h3>
+            <input type="checkbox" name="how" value="a" checked> Billboard <br>
+            <input type="checkbox" name="how" value="b"> Radio Advertisement <br>
+            <input type="checkbox" name="how" value="c"> Internet Advertisement <br>
+            <input type="checkbox" name="how" value="d"> Other <br>
             <br>
-            <h2>What web browser are you using?</h2>
+            <h3>What web browser are you using?</h3>
             <select name="browser">
                 <option value="google">Chrome</option>
                 <option value="ios">Safari</option>
