--- a/form.html
+++ b/form.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Register With Us!</title>
-        <h1>Register With Us!</h1>
     </head>
     <body>
+        <h1>Register With Us!</h1>
         <form method="POST" action="https://www.elformo.com/forms/973e5238-ba31-47e8-9fa6-a5ccbd5c0277">
             <label for="email">Email:</label>
             <input id="email" type="text" name="email" placeholder="Enter your email address">
@@ -19,19 +19,25 @@
             <textarea id="Bio" name="comment"  cols="100" rows="15" placeholder="Please tell us a little about yourself."></textarea>
             <br>
             <h3>How did you hear about us?</h3>
-            <input type="checkbox" name="how" value="a" checked> Billboard <br>
-            <input type="checkbox" name="how" value="b"> Radio Advertisement <br>
-            <input type="checkbox" name="how" value="c"> Internet Advertisement <br>
-            <input type="checkbox" name="how" value="d"> Other <br>
+            <input id="bb" type="checkbox" name="how" value="a" checked>
+            <label for="bb">Billboard</label>
+            <input id="rr" type="checkbox" name="how" value="b">
+            <label for="rr">Radio Advertisement</label>
+            <input id="ia" type="checkbox" name="how" value="c">
+            <label for="ia">Internet Advertisement</label>
+            <input id="other" type="checkbox" name="how" value="d">
+            <label for="other">Other</label>
             <br>
             <h3>What web browser are you using?</h3>
-            <select name="browser">
-                <option value="google">Chrome</option>
-                <option value="ios">Safari</option>
-                <option value="fox">Fire Fox</option>
-                <option value="ie">Internet Explorer</option>
-                <option value="other">Other</option>
-            </select>
+            <label>
+                <select name="browser">
+                    <option value="google">Chrome</option>
+                    <option value="ios">Safari</option>
+                    <option value="fox">Fire Fox</option>
+                    <option value="ie">Internet Explorer</option>
+                    <option value="other">Other</option>
+                </select>
+            </label>
             <br>
             <br>
             <input type="submit">
