--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -12,6 +12,13 @@
     return a + b;
 }
 console.log(sum(3,5));
+
+    function tarea(a, b, c) {
+        var parm = (a + b + c) / 2;
+        var trarea = math.sqrt(parm * (parm - a) * (parm - b) * (parm - c));
+        return trarea;
+    }
+console.log(tarea(5, 6, 7));
 </script>
 
 </body>
