exercise css styling

--- a/welcome.html
+++ b/welcome.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>html exercises</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 <body>
 <h1 id ="top">Welcome to Veridian Dynamics!</h1>
@@ -64,7 +65,10 @@
 </table>
 <p><em>All products come with our quality guarantee!</em></p>
 </body>
+<a href="Register.html" target="_blank"><button id="nb">Register for our Newsletter!</button></a>
+<br>
+<br>
 <footer>
-    <a href="#top">Go to the top of the page.</a>
+    <a href="#top">Go to the top of the page!</a>
 </footer>
 </html>
