morning warmup and exercises

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -15,10 +15,17 @@ console.log(sum(3,5));
 
     function tarea(a, b, c) {
         var parm = (a + b + c) / 2;
-        var trarea = math.sqrt(parm * (parm - a) * (parm - b) * (parm - c));
+        var trarea = Math.sqrt(parm * (parm - a) * (parm - b) * (parm - c));
             return trarea;
     }
 console.log(tarea(5, 6, 7));
+
+
+    function sayhi() {
+        return "Hi";
+    }
+    console.log(sayhi());
+
 </script>
 
 </body>
