--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -26,6 +26,11 @@ console.log(tarea(5, 6, 7));
     }
     console.log(sayhi());
 
+    function hello(x) {
+        return "Hello " + x + "!";
+    }
+console.log(hello("David"));
+
 </script>
 
 </body>
