finished flexbox nav

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <title>Navagation Bar</title>
     <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Work+Sans&display=swap" rel="stylesheet">
 </head>
-     <ul></ul>
-    <a href=""><li>Articles</li></a>
-    <a href=""><li>Products</li></a>
-    <a href=""><li>Jobs</li></a>
-    <a href=""><li id="logo">Logo</li></a>
-    <a href=""><li>Follow Us</li></a>
+<body>
+    <nav>
+         <ul>
+             <li><a href="#">Articles</a></li>
+             <li><a href="#">Products</a></li>
+             <li><a href="#">Market</a></li>
+             <li><a href="#">Jobs</a></li>
+             <li><a id="logo" href="#">Logo</a></li>
+             <li><a href="#">Follow Us</a></li>
+             <li><a href=""><img alt="search" src="img/search.png"></a></li>
+             <li><a href="#"><img alt="cart" src="img/Cart.png"></a></li>
+             <li><a href="#"><img alt="profile" src="img/icon.jpg"></a></li>
 
+         </ul>
+    </nav>
 </body>
 </html>
