--- a/streaming-player-ui.html
+++ b/streaming-player-ui.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Streaming Player</title>
-    <script src="https://kit.fontawesome.com/068546a344.js"></script>
+    <script src="https://kit.fontawesome.com/068546a344.js" rel="stylesheet"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/streaming-player-ui.css">
 </head>
