--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -31,6 +31,10 @@ console.log(tarea(5, 6, 7));
     }
 console.log(hello("David"));
 
+    function first(arr) {
+        return arr[0];
+    }
+    console.log(first(["hi", "hello"]))
 </script>
 
 </body>
