generic wed layout finished

--- a/generic-web-layout.html
+++ b/generic-web-layout.html
@@ -17,11 +17,15 @@
         <li><a class="tnav" href="*">Partners</a></li>
     </ul>
     <ul class="menu">
-            <li> Menu</li>
+            <li class="smenu"> Menu</li>
             <li><a class="smenu" href="*">Link</a></li>
+        <br>
             <li><a class="smenu" href="*">Link</a></li>
+        <br>
             <li><a class="smenu" href="*">Link</a></li>
+        <br>
             <li><a class="smenu" href="*">Link</a></li>
+        <br>
             <li><a class="smenu" href="*">Link</a></li>
     </ul>
     <h2 class="head">Heading</h2>
@@ -51,7 +55,7 @@
         <li><a class="num" href="*"> > </a></li>
     </ul>
     <div class="foot">Footer</div>
-    <div class="bot">Powerd by w3.css</div>
+    <div class="bot">Powered by w3.css</div>
 </main>
 </body>
 </html>
