--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -35,6 +35,12 @@ console.log(hello("David"));
         return arr[0];
     }
     console.log(first(["hi", "hello"]))
+
+    function areaT(x) {
+        return x * x / 3.141;
+    }
+    console.log(areaT(3));
+
 </script>
 
 </body>
