--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -41,6 +41,11 @@ console.log(hello("David"));
     }
     console.log(areaT(3));
 
+     function f(x, y, z) {
+         return x + " " + y + " " + z;
+     }
+     console.log(f(["bat", "elephant"], [1 , 2], [5, 6]))
+
 </script>
 
 </body>
