--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -36,11 +36,11 @@ console.log(hello("David"));
     }
     console.log(first(["hi", "hello"]))
 
-    function areaT(x) {
-        return x * x / 3.141;
+    function ptarea(a, b, c) {
+        var parm = (a + b + c) / 2;
+        var ptrarea = Math.sqrt(parm * (parm - a) * (parm - b) * (parm - c));
+        return trarea;
     }
-    console.log(areaT(3));
-
      function f(x, y, z) {
          return x + " " + y + " " + z;
      }
