--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -39,12 +39,17 @@ console.log(hello("David"));
     function ptarea(a, b, c) {
         var parm = (a + b + c) / 2;
         var ptrarea = Math.sqrt(parm * (parm - a) * (parm - b) * (parm - c));
-        return trarea;
+        return ptrarea;
     }
      function f(x, y, z) {
          return x + " " + y + " " + z;
      }
      console.log(f(["bat", "elephant"], [1 , 2], [5, 6]))
+
+    function uppercase(x) {
+        return x.toUpperCase();
+    }
+    console.log(uppercase("a"));
 
 </script>
 
